...
              modifier = Modifier.padding(top = 10.dp).fillMaxWidth(),
              horizontalArrangement = Arrangement.SpaceBetween) {
                IconButton(
                    modifier = Modifier.padding(start = 10.dp),
                    icon = Icons.Filled.Diamond,
                    contentDescription = "Go to Gambling Screen",
                    testTag = "GamblingButton",
                    onClick = { navigationActions.navigateTo(Screen.GAMBLING) })

                Row(
                    modifier = Modifier.padding(end = 10.dp),
                    horizontalArrangement = Arrangement.End) {
                      if (userViewModel.currentUser.collectAsState().value?.details?.isAdmin ==
...
                      }

                      IconButton(
                          modifier = Modifier.padding(end = 10.dp),
                          icon = Icons.Filled.Outbox,
                          contentDescription = "Sign Out",
                          testTag = "SignOutButton",
                          onClick = { signOut = true })

                      IconButton(
                          modifier = Modifier.padding(end = 10.dp),
                          icon = Icons.AutoMirrored.Filled.MenuBook,
                          contentDescription = "Tutorial",
                          testTag = "TutorialButton",
                          onClick = { navigationActions.navigateTo(Route.TUTORIAL) })
                    }
              }

          if (signOut) {
            AlertDialog(
                modifier = Modifier.testTag("SignOutDialog"),
                onDismissRequest = {},
                title = {
                  Text(stringResource(R.string.view_profile_screen_sign_out_dialog_title))
                },
                text = {
                  Text(stringResource(R.string.view_profile_screen_sign_out_dialog_message))
                },
                confirmButton = {
                  TextButton(
                      modifier = Modifier.testTag("SignOutDialogConfirmButton"),
                      onClick = {
                        userViewModel.signOut {
                          (context as Activity).runOnUiThread {
                            Toast.makeText(context, signOutToastText, Toast.LENGTH_SHORT).show()
                          }
                          navigationActions.navigateTo(TopLevelDestinations.AUTH)
...
                            stringResource(
                                R.string.view_profile_screen_sign_out_dialog_action_button))
                      }
                },
                dismissButton = {
                  TextButton(
                      modifier = Modifier.testTag("SignOutDialogCancelButton"),
                      onClick = { signOut = false }) {
                        Text(
                            stringResource(
                                R.string.view_profile_screen_sign_out_dialog_cancel_button))
                      }
                })
...
                      onClick = {
                        userViewModel.updateUser(editedUser, context)
                        isEditing = false
                      },
                      colorLevel = ColorLevel.PRIMARY,
                      enabled = validInputs,
                      testTag = "SaveButton")
                },
                cancelButton = {
                  Button(
                      text = stringResource(R.string.view_profile_screen_cancel_button),
                      onClick = { isEditing = false },
                      colorLevel = ColorLevel.SECONDARY,
                      testTag = "CancelButton")
                })
          } else {
            DisplayProfileComponent(userState) {
              // Edit Button directly in the Box
              Button(
                  text = stringResource(R.string.view_profile_screen_modify_profile_button),
                  onClick = { isEditing = true },
                  colorLevel = ColorLevel.TERTIARY,
                  testTag = "EditButton")

              val userReviews by reviewViewModel.userReviews.collectAsState()
              // Map to store the parking corresponding to each review. This is used to display the
              // parking
              // name in the review card and allow to navigate to the parking's details screen
              val reviewToParkingMap = remember { mutableStateMapOf<String, Parking>() }
...

  Box(modifier = Modifier.fillMaxSize()) {
    if (favoriteParkings.isEmpty()) {
      Text(
          text = stringResource(R.string.view_profile_screen_no_favorite_parking),
          style = MaterialTheme.typography.bodyMedium,
          modifier = Modifier.testTag("NoFavoritesMessage").padding(16.dp))
    } else {
      LazyColumn(
          modifier = Modifier.fillMaxWidth().testTag("FavoriteParkingList"),
          contentPadding = PaddingValues(16.dp)) {
            itemsIndexed(favoriteParkings) { index, parking ->
              FavoriteParkingCard(
                  navigationActions, parkingViewModel, userViewModel, parking, index)
            }
          }
...

  Box(modifier = Modifier.fillMaxSize()) {
    if (userReviews.isEmpty()) {
      Text(
          text = stringResource(R.string.view_profile_screen_no_reviews_message),
          style = MaterialTheme.typography.bodyMedium,
          modifier = Modifier.padding(16.dp).testTag("NoReviewsMessage"))
    } else {
      LazyColumn(
          modifier = Modifier.fillMaxWidth().testTag("UserReviewsList"),
          contentPadding = PaddingValues(16.dp)) {
            items(
                // Filter out reviews that do not have a corresponding parking (desynced data)
                items = userReviews.filter { reviewToParkingMap.containsKey(it.uid) },
                key = { it.uid }) { curReview ->
                  val index = userReviews.indexOf(curReview)
...
      Text(
          text = stringResource(R.string.view_profile_screen_no_images_message),
          style = MaterialTheme.typography.bodyMedium,
          modifier = Modifier.padding(16.dp).testTag("NoImagesMessage"))
    } else {
      LazyColumn(
          modifier = Modifier.fillMaxWidth().testTag("UserImagesList"),
          contentPadding = PaddingValues(16.dp)) {
            itemsIndexed(imagesUrls) { index, url ->
              UserImageCard(
                  url = url,
                  onClick = {
                    // When an image is clicked, trigger the first AlertDialog
...
                      showFirstDialog.value = false
                    },
                    {})
              },
              icon = Icons.Filled.LocalParking,
              contentDescription = "Parking From Image",
              modifier = Modifier.testTag("ParkingFromImageButton"))
        },
        dismissButton = {
          // Delete Button opens the SECOND delete dialog
          IconButton(
              onClick = {
                showFirstDialog.value = false
                showDeleteDialog.value = true // Trigger the DeleteConfirmationDialog
              },
              modifier = Modifier.testTag("DeleteImageButton"),
              icon = Icons.Filled.Delete,
              contentDescription = "Delete Image")
        })
  }

  if (showDeleteDialog.value) {
...
private fun UserImageCard(url: String, onClick: (String) -> Unit) {
  Card(
      modifier =
          Modifier.fillMaxWidth()
              .padding(8.dp)
              .clickable { onClick(url) } // Attach onClick here
              .testTag("ImageCard"),
      colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.surface),
      elevation = CardDefaults.cardElevation(defaultElevation = 4.dp)) {
        Column(modifier = Modifier.padding(16.dp)) {
          Spacer(modifier = Modifier.height(8.dp))
          Image(
              painter = rememberAsyncImagePainter(model = url),
...
