...
        Column(
            modifier = Modifier.padding(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally) {
              Text(
                  text = firstName,
                  style = MaterialTheme.typography.headlineMedium,
                  modifier = Modifier.testTag("DisplayFirstName"))

              Text(
                  text = lastName,
                  style = MaterialTheme.typography.headlineMedium,
                  modifier = Modifier.testTag("DisplayLastName"))

              Spacer(modifier = Modifier.height(16.dp))

              ProfileImageComponent(
                  url = profilePictureUrl,
                  onClick = {},
                  isEditable = false,
                  modifier = Modifier.testTag("ProfileImage"))

              Spacer(modifier = Modifier.height(8.dp))

              UserTagText(
                  ownerUsername = username,
                  symbol = range.symbol,
                  color = range.color,
                  level = level,
                  modifier = Modifier.testTag("DisplayUsernameWithLevel"),
                  style = MaterialTheme.typography.bodyMedium)

              Spacer(modifier = Modifier.height(16.dp))
            }
        extras()
      }
...
