...
    <string name="already_in_favorites_toast">Parking is already in favorites</string>
    <string name="sign_in_to_add_favorites">Please sign in to add favorites</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="delete_dialog_title">Delete Item</string>
    <string name="delete_dialog_message">Are you sure you want to delete this item? This action cannot be undone.</string>
    <string name="delete_dialog_confirm_button">Delete</string>
    <string name="delete_dialog_cancel_button">Cancel</string>

    <!-- Error Messages -->
    <string name="input_min_characters">Minimum %1$d characters required (current: %2$d)</string>
    <string name="input_max_characters">Maximum %1$d characters allowed (current: %2$d)</string>
    <string name="input_min_characters_small">Minimum %1$d characters required </string>
    <string name="input_max_characters_small">Maximum %1$d characters allowed </string>
...
    <string name="view_profile_screen_modify_profile_button">Modify Profile</string>
    <string name="view_profile_screen_default_profile_picture">Default Profile Picture</string>
    <string name="view_profile_screen_profile_picture">Profile Picture</string>
    <string name="view_profile_screen_edit_profile_picture">Edit Profile Picture</string>
    <string name="view_profile_screen_no_favorite_parking">You haven\'t added any parking to your favorites yet</string>
    <string name="view_profile_screen_remove_from_favorite">Remove from Favorites</string>
    <string name="view_profile_screen_remove_favorite_dialog_title">Remove favorite</string>
    <string name="view_profile_screen_remove_favorite_dialog_message">Are you sure you want to remove %s from your favorites?</string>
    <string name="view_profile_screen_remove_favorite_dialog_action_button">Remove</string>
    <string name="view_profile_screen_remove_favorite_dialog_cancel_button">Cancel</string>
    <string name="view_profile_on_sign_out_toast">You\'re signed out!</string>
    <string name="view_profile_on_fav_parking_removal_toast">Removed from Favorites!</string>
    <string name="view_profile_screen_sign_out_dialog_title">Sign Out ? </string>
    <string name="view_profile_screen_sign_out_dialog_message">Are you sure you want to sign out?</string>
    <string name="view_profile_screen_sign_out_dialog_action_button">Sign Out</string>
...
