...
        ConditionCheckingInputText(
            value = firstName,
            onValueChange = { firstName = it },
            label = stringResource(R.string.view_profile_screen_first_name_label),
            minCharacters = FIRST_NAME_MIN_LENGTH,
            maxCharacters = FIRST_NAME_MAX_LENGTH,
            testTag = "FirstNameField")

        Spacer(modifier = Modifier.height(8.dp))

        ConditionCheckingInputText(
            value = lastName,
            onValueChange = { lastName = it },
            label = stringResource(R.string.view_profile_screen_last_name_label),
            minCharacters = LAST_NAME_MIN_LENGTH,
            maxCharacters = LAST_NAME_MAX_LENGTH,
            testTag = "LastNameField")

        Spacer(modifier = Modifier.height(8.dp))

        ConditionCheckingInputText(
            value = username,
            onValueChange = { username = it },
            label = stringResource(R.string.view_profile_screen_username_label),
            minCharacters = USERNAME_MIN_LENGTH,
            maxCharacters = USERNAME_MAX_LENGTH,
            testTag = "UsernameField")

        Spacer(modifier = Modifier.height(16.dp))

        val validUserInput = areInputsValid(firstName, lastName, username)
        if (verticalButtonDisplay) {
          saveButton(copyUser(user), validUserInput)
...
